# permissions_postgresql

./: README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
per_and_post/: apps.py
permissions_project/: asgi.py  settings.py  urls.py  wsgi.py
posts_app/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
posts_app/migrations/: 0001_initial.py
